--- a/src/components/ModalVideo/ModalVideo.scss
+++ b/src/components/ModalVideo/ModalVideo.scss
@@ -29,4 +29,15 @@
       }
     }
   }
+
+    .player-wrapper {
+        position: relative;
+
+        .react-player {
+            position: absolute;
+            top: 0;
+            left: 0;
+        }
+    } 
+    
 }
