--- a/src/pages/movie/movie.scss
+++ b/src/pages/movie/movie.scss
@@ -51,6 +51,7 @@
                 border: 0;
                 font-size: 20px;
                 cursor: pointer;
+                left: -50px;
                 &:hover,
                 &:focus,
                 &:active {
